--- a/index.html
+++ b/index.html
@@ -6,12 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css"/>
     <title>Ajax Sandbox</title>
+    <style>
+        .ajaxHeader, .chuckNorrisHeader {
+            color: blueviolet;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <button id="button">Get Data</button>
-        <br><br>
-        <div id="output"></div>
+        <div>
+        <h2 class="ajaxHeader">Working with Ajax & JSON </h2>
+            <button id="button">Get Data</button>
+            <br><br>
+            <div id="output"></div>
+            <button id="button1">Get Customer</button>
+            <button id="button2">Get Customers</button>
+            <br><br>
+            <h3>Customer</h3>
+            <div id="customer"></div>
+            <h3>Customers</h3>
+            <div id="customers"></div>
+        </div>
+        <hr>
+        <h2 class="chuckNorrisHeader">Chuck Norris Joke Generator</h2>
+        <form>
+            <div>
+                <label for="number">Number of Jokes</label>
+                <input type="number" id="number">
+            </div>
+            <div>
+                <button class="get-jokes">Get Jokes</button>
+            </div>
+        </form>
+        <ul class="jokes"></ul>
     </div>
     <script src="ajax-sandbox.js"></script>
 </body>
