adding callbacks lesson

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         </form>
         <ul class="jokes"></ul>
     </div>
+    <div class="posts"></div>
     <script src="ajax-sandbox.js"></script>
+    <script src="callbacks.js"></script>
 </body>
 </html>
